--- a/files/ansible/group_vars/all/routing_options.yml
+++ b/files/ansible/group_vars/all/routing_options.yml
@@ -3,8 +3,9 @@ configuration:
     bmp:
       station:
         - name: openbmp
-          initiation_message: "Development/LAB"
+          initiation_message: "{{ inventory_hostname }}"
           local_address: "{{ ansible_host }}"
+          local_port: "{{ 65535 | random(start=1024) }}"
           connection_mode: active
           monitor: enable
           route_monitoring: 
