--- a/files/ansible/config/dc1bb1.conf
+++ b/files/ansible/config/dc1bb1.conf
@@ -357,11 +357,12 @@ interfaces {
     }
     lo0 {
         unit 0 {
+            description "loopback";
             family inet {
-                address 192.168.255.1/32;
+                address 192.168.33.1/32;
             }
             family iso {
-                address 49.0192.0168.0255.0001.00;
+                address 49.0192.0168.0033.0001.00;
             }
         }
     }
@@ -395,20 +396,6 @@ forwarding-options {
     }
 }
 routing-options {
-    bmp {
-        station openbmp {
-            initiation-message Development/LAB;
-            local-address 10.255.1.33;
-            connection-mode active;
-            monitor enable;
-            route-monitoring {
-                pre-policy;
-            }
-            station-address 10.255.127.21;
-            station-port 5000;
-            statistics-timeout 300;
-        }
-    }
     interface-routes {
         rib-group inet INTERFACE_RIB;
     }
@@ -435,7 +422,7 @@ protocols {
     bgp {
         group DC_ROUTE_REFLECTORS {
             type internal;
-            local-address 192.168.255.1;
+            local-address 192.168.33.1;
             log-updown;
             family inet {
                 unicast;
@@ -452,10 +439,10 @@ protocols {
                 multiplier 3;
                 session-mode multihop;
             }
-            neighbor 192.168.255.101 {
+            neighbor 192.168.33.11 {
                 description "DC_RR_01";
             }
-            neighbor 192.168.255.102 {
+            neighbor 192.168.33.12 {
                 description "DC_RR_02";
             }
         }
