--- a/files/ansible/config/dc1p1lf1.conf
+++ b/files/ansible/config/dc1p1lf1.conf
@@ -349,11 +349,12 @@ interfaces {
     }
     lo0 {
         unit 0 {
+            description "loopback";
             family inet {
-                address 192.168.255.7/32;
+                address 192.168.33.3/32;
             }
             family iso {
-                address 49.0192.0168.0255.0007.00;
+                address 49.0192.0168.0033.0003.00;
             }
         }
     }
@@ -387,20 +388,6 @@ forwarding-options {
     }
 }
 routing-options {
-    bmp {
-        station openbmp {
-            initiation-message Development/LAB;
-            local-address 10.255.1.21;
-            connection-mode active;
-            monitor enable;
-            route-monitoring {
-                pre-policy;
-            }
-            station-address 10.255.127.21;
-            station-port 5000;
-            statistics-timeout 300;
-        }
-    }
     router-id 192.168.255.7;
     autonomous-system 65000.101 asdot-notation;
     forwarding-table {
@@ -412,7 +399,7 @@ protocols {
     bgp {
         group POD1_OVERLAY_TO_POD1_SPINES {
             type internal;
-            local-address 192.168.255.7;
+            local-address 192.168.33.3;
             log-updown;
             family inet {
                 unicast;
@@ -426,10 +413,10 @@ protocols {
                 multiplier 2;
                 session-mode multihop;
             }
-            neighbor 192.168.255.5 {
+            neighbor 192.168.33.7 {
                 description "POD1_SPINE1";
             }
-            neighbor 192.168.255.6 {
+            neighbor 192.168.33.8 {
                 description "POD1_SPINE2";
             }
         }
