--- a/files/ansible/config/dc1rr2.conf
+++ b/files/ansible/config/dc1rr2.conf
@@ -314,11 +314,12 @@ interfaces {
     }
     lo0 {
         unit 0 {
+            description "loopback";
             family inet {
-                address 192.168.255.102/32;
+                address 192.168.33.12/32;
             }
             family iso {
-                address 49.0192.0168.0255.0102.00;
+                address 49.0192.0168.0033.0012.00;
             }
         }
     }
@@ -352,20 +353,6 @@ forwarding-options {
     }
 }
 routing-options {
-    bmp {
-        station openbmp {
-            initiation-message Development/LAB;
-            local-address 10.255.1.42;
-            connection-mode active;
-            monitor enable;
-            route-monitoring {
-                pre-policy;
-            }
-            station-address 10.255.127.21;
-            station-port 5000;
-            statistics-timeout 300;
-        }
-    }
     rib inet.3 {
         static {
             route 0.0.0.0/0 discard;
@@ -383,7 +370,7 @@ protocols {
         group DC_ROUTE_REFLECTORS {
             advertise-inactive;
             type internal;
-            local-address 192.168.255.102;
+            local-address 192.168.33.12;
             log-updown;
             family inet {
                 unicast;
