--- a/files/ansible/config/dc1p1sn1.conf
+++ b/files/ansible/config/dc1p1sn1.conf
@@ -355,11 +355,12 @@ interfaces {
     }
     lo0 {
         unit 0 {
+            description "loopback";
             family inet {
-                address 192.168.255.3/32;
+                address 192.168.33.7/32;
             }
             family iso {
-                address 49.0192.0168.0255.0003.00;
+                address 49.0192.0168.0033.0007.00;
             }
         }
     }
@@ -393,20 +394,6 @@ forwarding-options {
     }
 }
 routing-options {
-    bmp {
-        station openbmp {
-            initiation-message Development/LAB;
-            local-address 10.255.1.35;
-            connection-mode active;
-            monitor enable;
-            route-monitoring {
-                pre-policy;
-            }
-            station-address 10.255.127.21;
-            station-port 5000;
-            statistics-timeout 300;
-        }
-    }
     interface-routes {
         rib-group inet INTERFACE_RIB;
     }
@@ -433,7 +420,7 @@ protocols {
     bgp {
         group OVERLAY_TO_DC_ROUTE_REFLECTORS {
             type internal;
-            local-address 192.168.255.3;
+            local-address 192.168.33.7;
             log-updown;
             family inet {
                 unicast;
@@ -451,10 +438,10 @@ protocols {
                 multiplier 3;
                 session-mode multihop;
             }
-            neighbor 192.168.255.101 {
+            neighbor 192.168.33.11 {
                 description "DC_ROUTE_REFLECTOR_01";
             }
-            neighbor 192.168.255.102 {
+            neighbor 192.168.33.12 {
                 description "DC_ROUTE_REFLECTOR_02";
             }
         }
@@ -485,7 +472,7 @@ protocols {
         }
         group POD1_OVERLAY_TO_POD1_SPINES {
             type external;
-            local-address 192.168.255.3;
+            local-address 192.168.33.7;
             peer-as 65000.101;
             log-updown;
             family evpn {
@@ -500,10 +487,10 @@ protocols {
                 multiplier 2;
                 session-mode multihop;
             }
-            neighbor 192.168.255.5 {
+            neighbor 192.168.33.9 {
                 description "POD1-SPINE1";
             }
-            neighbor 192.168.255.6 {
+            neighbor 192.168.33.10 {
                 description "POD1-SPINE2";
             }
         }
