--- a/files/ansible/config/dc1p1sp1.conf
+++ b/files/ansible/config/dc1p1sp1.conf
@@ -423,11 +423,12 @@ interfaces {
     }
     lo0 {
         unit 0 {
+            description "loopback";
             family inet {
-                address 192.168.255.5/32;
+                address 192.168.33.9/32;
             }
             family iso {
-                address 49.0192.0168.0255.0005.00;
+                address 49.0192.0168.0033.0009.00;
             }
         }
         unit 2 {
@@ -466,20 +467,6 @@ forwarding-options {
     }
 }
 routing-options {
-    bmp {
-        station openbmp {
-            initiation-message Development/LAB;
-            local-address 10.255.1.27;
-            connection-mode active;
-            monitor enable;
-            route-monitoring {
-                pre-policy;
-            }
-            station-address 10.255.127.21;
-            station-port 5000;
-            statistics-timeout 300;
-        }
-    }
     interface-routes {
         rib-group inet INTERFACE_RIB;
     }
@@ -530,7 +517,7 @@ protocols {
         }
         group POD1_OVERLAY_TO_POD1_LEAFS {
             type internal;
-            local-address 192.168.255.5;
+            local-address 192.168.33.9;
             log-updown;
             family inet {
                 unicast;
@@ -546,16 +533,22 @@ protocols {
                 multiplier 2;
                 session-mode multihop;
             }
-            neighbor 192.168.255.7 {
+            neighbor 192.168.33.3 {
                 description "POD1_LEAF_01";
             }
-            neighbor 192.168.255.8 {
+            neighbor 192.168.33.4 {
                 description "POD1_LEAF_02";
+            }
+            neighbor 192.168.33.5 {
+                description "POD1_LEAF_03";
+            }
+            neighbor 192.168.33.6 {
+                description "POD1_LEAF_04";
             }
         }
         group POD1_ROUTE_REFLECTORS {
             type internal;
-            local-address 192.168.255.5;
+            local-address 192.168.33.9;
             log-updown;
             family evpn {
                 signaling;
@@ -567,13 +560,16 @@ protocols {
                 multiplier 2;
                 session-mode multihop;
             }
-            neighbor 192.168.255.6 {
-                description "pod1-spine2";
+            neighbor 192.168.33.11 {
+                description "DC_ROUTE_REFLECTOR_01";
+            }
+            neighbor 192.168.33.12 {
+                description "DC_ROUTE_REFLECTOR_02";
             }
         }
         group POD1_OVERLAY_TO_POD1_SERVICE_NODES {
             type external;
-            local-address 192.168.255.5;
+            local-address 192.168.33.9;
             peer-as 65000.1;
             log-updown;
             family evpn {
@@ -588,10 +584,10 @@ protocols {
                 multiplier 2;
                 session-mode multihop;
             }
-            neighbor 192.168.255.3 {
+            neighbor 192.168.33.7 {
                 description "POD1_SERVICE_NODE_01";
             }
-            neighbor 192.168.255.4 {
+            neighbor 192.168.33.8 {
                 description "POD1_SERVICE_NODE_02";
             }
         }
