--- a/files/ansible/group_vars/backbone/protocols.yml
+++ b/files/ansible/group_vars/backbone/protocols.yml
@@ -13,14 +13,15 @@ configuration:
             unicast: null
           inet_vpn:
             unicast: null
+        local_address: "{{ device.lo0.ipv4 }}"
         log_updown: null
         multipath: null
         name: DC_ROUTE_REFLECTORS
         neighbor:
           - description: DC_RR_01
-            name: 192.168.255.101
+            name: 192.168.33.11
           - description: DC_RR_02
-            name: 192.168.255.102
+            name: 192.168.33.12
         type: internal
     isis:
       apply_groups: GLOBAL_ISIS_DEFAULTS
