--- a/files/ansible/host_vars/dc1bb2/interfaces.yml
+++ b/files/ansible/host_vars/dc1bb2/interfaces.yml
@@ -93,11 +93,12 @@ configuration:
           name: '0'
       - name: lo0
         unit:
-          family:
-            inet:
-              address:
-                name: 192.168.255.2/32
-            iso:
-              address:
-                name: 49.0192.0168.0255.0002.00
-          name: '0'
+          - description: loopback
+            family:
+              inet:
+                address:
+                  name: "{{ device.lo0.ipv4 }}/32"
+              iso:
+                address:
+                  name: "{{ device.lo0.iso }}"
+            name: "0"
