--- a/files/ansible/host_vars/dc1p1lf4/protocols.yml
+++ b/files/ansible/host_vars/dc1p1lf4/protocols.yml
@@ -11,15 +11,15 @@ configuration:
             signaling: null
           inet:
             unicast: null
-        local_address: 192.168.255.10
+        local_address: "{{ device.lo0.ipv4 }}"
         log_updown: null
         multipath: null
         name: POD1_OVERLAY_TO_POD1_SPINES
         neighbor:
-        - description: POD1_SPINE1
-          name: 192.168.255.5
-        - description: POD1_SPINE2
-          name: 192.168.255.6
+          - description: POD1_SPINE1
+            name: 192.168.33.7
+          - description: POD1_SPINE2
+            name: 192.168.33.8
         type: internal
     evpn:
       encapsulation: vxlan
