--- a/files/ansible/host_vars/dc1p1sn1/protocols.yml
+++ b/files/ansible/host_vars/dc1p1sn1/protocols.yml
@@ -15,14 +15,14 @@ configuration:
               unicast: null
             inet_vpn:
               unicast: null
-          local_address: 192.168.255.3
+          local_address: "{{ device.lo0.ipv4 }}"
           log_updown: null
           multipath: null
           neighbor:
             - description: DC_ROUTE_REFLECTOR_01
-              name: 192.168.255.101
+              name: 192.168.33.11
             - description: DC_ROUTE_REFLECTOR_02
-              name: 192.168.255.102
+              name: 192.168.33.12
           type: internal
         - name: POD1_UNDERLAY_TO_POD1_SPINES
           advertise_inactive: null
@@ -53,15 +53,15 @@ configuration:
           family:
             evpn:
               signaling: null
-          local_address: 192.168.255.3
+          local_address: "{{ device.lo0.ipv4 }}"
           log_updown: null
           multihop:
             no_nexthop_change: null
           multipath: null
           neighbor:
             - description: POD1-SPINE1
-              name: 192.168.255.5
+              name: 192.168.33.9
             - description: POD1-SPINE2
-              name: 192.168.255.6
+              name: 192.168.33.10
           peer_as: '65000.101'
           type: external
