--- a/files/ansible/host_vars/dc1p1sp1/interfaces.yml
+++ b/files/ansible/host_vars/dc1p1sp1/interfaces.yml
@@ -150,14 +150,15 @@ configuration:
             name: '1048'
       - name: lo0
         unit:
-          - family:
+          - description: loopback
+            family:
               inet:
                 address:
-                  name: 192.168.255.5/32
+                  name: "{{ device.lo0.ipv4 }}/32"
               iso:
                 address:
-                  name: 49.0192.0168.0255.0005.00
-            name: '0'
+                  name: "{{ device.lo0.iso }}"
+            name: "0"
           - family:
               inet:
                 address:
