--- a/files/ansible/host_vars/dc1rr1/protocols.yml
+++ b/files/ansible/host_vars/dc1rr1/protocols.yml
@@ -16,7 +16,7 @@ configuration:
               unicast: null
             inet_vpn:
               unicast: null
-          local_address: 192.168.255.101
+          local_address: "{{ device.lo0.ipv4 }}"
           log_updown: null
           multipath: null
           neighbor:
@@ -42,7 +42,7 @@ configuration:
               unicast: null
             inet_vpn:
               unicast: null
-          local_address: 192.168.255.101
+          local_address: "{{ device.lo0.ipv4 }}"
           log_updown: null
           multipath: null
           neighbor:
