--- a/files/ansible/host_vars/dc1rr2/protocols.yml
+++ b/files/ansible/host_vars/dc1rr2/protocols.yml
@@ -2,53 +2,53 @@ configuration:
   protocols:
     bgp:
       group:
-      - advertise_inactive: null
-        bfd_liveness_detection:
-          minimum_interval: '2000'
-          multiplier: '3'
-          session_mode: multihop
-        cluster: 0.0.0.1
-        family:
-          evpn:
-            signaling: null
-          inet:
-            unicast: null
-          inet_vpn:
-            unicast: null
-        local_address: 192.168.255.102
-        log_updown: null
-        multipath: null
-        name: DC_ROUTE_REFLECTORS
-        neighbor:
-        - description: dc-bb-01
-          name: 192.168.255.1
-        - description: dc-bb-02
-          name: 192.168.255.2
-        - description: pod1-servicenode1
-          name: 192.168.255.3
-        - description: pod1-servicenode2
-          name: 192.168.255.4
-        type: internal
-      - advertise_inactive: null
-        bfd_liveness_detection:
-          minimum_interval: '2000'
-          multiplier: '3'
-          session_mode: multihop
-        family:
-          evpn:
-            signaling: null
-          inet:
-            unicast: null
-          inet_vpn:
-            unicast: null
-        local_address: 192.168.255.102
-        log_updown: null
-        multipath: null
-        name: PEER_ROUTE_REFLECTOR
-        neighbor:
-          description: dc-rr-01
-          name: 192.168.255.101
-        type: internal
+        - advertise_inactive: null
+          bfd_liveness_detection:
+            minimum_interval: '2000'
+            multiplier: '3'
+            session_mode: multihop
+          cluster: 0.0.0.1
+          family:
+            evpn:
+              signaling: null
+            inet:
+              unicast: null
+            inet_vpn:
+              unicast: null
+          local_address: "{{ device.lo0.ipv4 }}"
+          log_updown: null
+          multipath: null
+          name: DC_ROUTE_REFLECTORS
+          neighbor:
+          - description: dc-bb-01
+            name: 192.168.255.1
+          - description: dc-bb-02
+            name: 192.168.255.2
+          - description: pod1-servicenode1
+            name: 192.168.255.3
+          - description: pod1-servicenode2
+            name: 192.168.255.4
+          type: internal
+        - advertise_inactive: null
+          bfd_liveness_detection:
+            minimum_interval: '2000'
+            multiplier: '3'
+            session_mode: multihop
+          family:
+            evpn:
+              signaling: null
+            inet:
+              unicast: null
+            inet_vpn:
+              unicast: null
+          local_address: 192.168.255.102
+          log_updown: null
+          multipath: null
+          name: PEER_ROUTE_REFLECTOR
+          neighbor:
+            description: dc-rr-01
+            name: 192.168.255.101
+          type: internal
     isis:
       apply_groups: GLOBAL_ISIS_DEFAULTS
       interface:
