collapsing routing options

--- a/files/ansible/group_vars/all/routing_options.yml
+++ b/files/ansible/group_vars/all/routing_options.yml
@@ -1,15 +1,3 @@
-# configuration:
-#   routing_options:
-#     bmp:
-#       station:
-#         - name: openbmp
-#           initiation_message: "{{ inventory_hostname }}"
-#           local_address: "{{ ansible_host }}"
-#           # local_port: "{{ 65535 | random(start=1024) }}"
-#           connection_mode: active
-#           monitor: enable
-#           route_monitoring: 
-#             pre_policy: null
-#           station_address: 10.255.127.21
-#           station_port: 5000
-#           statistics_timeout: 300
+configuration:
+  routing_options:
+    router_id: "{{ device.lo0.ipv4 }}"
