--- a/files/ansible/group_vars/leaf/switch_options.yml
+++ b/files/ansible/group_vars/leaf/switch_options.yml
@@ -1,7 +1,7 @@
 configuration:
   switch_options:
     route_distinguisher:
-      rd_type: 192.168.255.3:999
+      rd_type: "{{ device.lo0.ipv4 }}:999"
     vrf_import: EVPN_IMPORT
     vrf_target:
       auto:
