--- a/files/ansible/config/dc1p1lf2.conf
+++ b/files/ansible/config/dc1p1lf2.conf
@@ -495,7 +495,7 @@ policy-options {
     prefix-list PREFIX_NTP_BOOT_SERVERS {
         apply-path "system ntp boot-server <*>";
     }
-    policy-statement EVPN-IMPORT {
+    policy-statement EVPN_IMPORT {
         term EVPN-ROUTES {
             from {
                 community ESI;
@@ -525,7 +525,7 @@ firewall {
 switch-options {
     vtep-source-interface lo0.0;
     route-distinguisher 192.168.255.8:999;
-    vrf-import EVPN-IMPORT;
+    vrf-import EVPN_IMPORT;
     vrf-target {
         target:999:999;
         auto {
