--- a/files/ansible/host_vars/dc1p1lf3/policy_options.yml
+++ b/files/ansible/host_vars/dc1p1lf3/policy_options.yml
@@ -4,7 +4,7 @@ configuration:
       members: target:999:999
       name: ESI
     policy_statement:
-    - name: EVPN-IMPORT
+    - name: EVPN_IMPORT
       term:
         from:
           community: ESI
