--- a/files/ansible/config/dc1bb1.conf
+++ b/files/ansible/config/dc1bb1.conf
@@ -396,6 +396,21 @@ forwarding-options {
     }
 }
 routing-options {
+    bmp {
+        station openbmp {
+            initiation-message dc1bb1;
+            local-address 192.168.33.1;
+            connection-mode active;
+            monitor enable;
+            route-monitoring {
+                pre-policy;
+                post-policy;
+            }
+            station-address 10.255.72.87;
+            station-port 5000;
+            statistics-timeout 300;
+        }
+    }
     interface-routes {
         rib-group inet INTERFACE_RIB;
     }
