--- a/files/ansible/config/dc1p1lf4.conf
+++ b/files/ansible/config/dc1p1lf4.conf
@@ -388,8 +388,23 @@ forwarding-options {
     }
 }
 routing-options {
+    bmp {
+        station openbmp {
+            initiation-message dc1p1lf4;
+            local-address 192.168.33.6;
+            connection-mode active;
+            monitor enable;
+            route-monitoring {
+                pre-policy;
+                post-policy;
+            }
+            station-address 10.255.72.87;
+            station-port 5000;
+            statistics-timeout 300;
+        }
+    }
     router-id 192.168.33.6;
-    autonomous-system 65000.101 asdot-notation;
+    autonomous-system 1.101 asdot-notation;
     forwarding-table {
         export LOAD_BALANCE;
         ecmp-fast-reroute;
@@ -524,12 +539,12 @@ firewall {
 }
 switch-options {
     vtep-source-interface lo0.0;
-    route-distinguisher 192.168.255.10:999;
+    route-distinguisher 192.168.33.6:999;
     vrf-import EVPN_IMPORT;
     vrf-target {
         target:999:999;
         auto {
-            import-as 65000.101 {
+            import-as 1.101 {
                 vni-list all;
             }
         }
