--- a/files/ansible/config/dc1p1sp1.conf
+++ b/files/ansible/config/dc1p1sp1.conf
@@ -467,6 +467,21 @@ forwarding-options {
     }
 }
 routing-options {
+    bmp {
+        station openbmp {
+            initiation-message dc1p1sp1;
+            local-address 192.168.33.9;
+            connection-mode active;
+            monitor enable;
+            route-monitoring {
+                pre-policy;
+                post-policy;
+            }
+            station-address 10.255.72.87;
+            station-port 5000;
+            statistics-timeout 300;
+        }
+    }
     interface-routes {
         rib-group inet INTERFACE_RIB;
     }
@@ -477,7 +492,7 @@ routing-options {
         }
     }
     router-id 192.168.33.9;
-    autonomous-system 65000.101 asdot-notation;
+    autonomous-system 1.101 asdot-notation;
     forwarding-table {
         export LOAD_BALANCE;
         ecmp-fast-reroute;
@@ -756,12 +771,12 @@ firewall {
 }
 switch-options {
     vtep-source-interface lo0.0;
-    route-distinguisher 192.168.255.5:999;
+    route-distinguisher 192.168.33.9:999;
     vrf-import EVPN_IMPORT;
     vrf-target {
         target:999:999;
         auto {
-            import-as 65000.101 {
+            import-as 1.101 {
                 vni-list all;
             }
         }
