--- a/files/ansible/config/dc1rr1.conf
+++ b/files/ansible/config/dc1rr1.conf
@@ -353,6 +353,21 @@ forwarding-options {
     }
 }
 routing-options {
+    bmp {
+        station openbmp {
+            initiation-message dc1rr1;
+            local-address 192.168.33.11;
+            connection-mode active;
+            monitor enable;
+            route-monitoring {
+                pre-policy;
+                post-policy;
+            }
+            station-address 10.255.72.87;
+            station-port 5000;
+            statistics-timeout 300;
+        }
+    }
     rib inet.3 {
         static {
             route 0.0.0.0/0 discard;
