--- a/files/ansible/config/dc1p1sn2.conf
+++ b/files/ansible/config/dc1p1sn2.conf
@@ -394,6 +394,21 @@ forwarding-options {
     }
 }
 routing-options {
+    bmp {
+        station openbmp {
+            initiation-message dc1p1sn2;
+            local-address 192.168.33.8;
+            connection-mode active;
+            monitor enable;
+            route-monitoring {
+                pre-policy;
+                post-policy;
+            }
+            station-address 10.255.72.87;
+            station-port 5000;
+            statistics-timeout 300;
+        }
+    }
     interface-routes {
         rib-group inet INTERFACE_RIB;
     }
@@ -403,7 +418,7 @@ routing-options {
             import-policy INTERFACE_IMPORT;
         }
     }
-    router-id 192.168.255.4;
+    router-id 192.168.33.8;
     autonomous-system 65000.1 asdot-notation;
     forwarding-table {
         export LOAD_BALANCE;
@@ -448,7 +463,7 @@ protocols {
         group POD1_UNDERLAY_TO_POD1_SPINES {
             advertise-inactive;
             type external;
-            peer-as 65000.101;
+            peer-as 1.101;
             log-updown;
             family inet {
                 unicast;
@@ -473,7 +488,7 @@ protocols {
         group POD1_OVERLAY_TO_POD1_SPINES {
             type external;
             local-address 192.168.33.8;
-            peer-as 65000.101;
+            peer-as 1.101;
             log-updown;
             family evpn {
                 signaling;
@@ -579,7 +594,7 @@ policy-options {
     policy-statement EBGP_EXPORT {
         term LOCAL_LOOPBACK {
             from {
-                route-filter 192.168.255.4/32 exact;
+                route-filter 192.168.33.8/32 exact;
             }
             then accept;
         }
@@ -633,12 +648,12 @@ firewall {
 }
 switch-options {
     vtep-source-interface lo0.0;
-    route-distinguisher 192.168.255.4:999;
+    route-distinguisher 192.168.33.8:999;
     vrf-import EVPN_IMPORT;
     vrf-target {
         target:999:999;
         auto {
-            import-as 65000.101 {
+            import-as 1.101 {
                 vni-list all;
             }
         }
