--- a/files/ansible/group_vars/all/routing_options.yml
+++ b/files/ansible/group_vars/all/routing_options.yml
@@ -1,17 +1,17 @@
 configuration:
   routing_options:
-    bmp:
-      station:
-        - name: openbmp
-          initiation_message: "{{ inventory_hostname }}"
-          local_address: "{{ ansible_host }}"
-          # local_port: "{{ 65535 | random(start=1024) }}"
-          connection_mode: active
-          monitor: enable
-          route_monitoring: 
-            pre_policy: null
-            post_policy: null
-          station_address: 10.255.72.87
-          station_port: 5000
-          statistics_timeout: 300
+    # bmp:
+    #   station:
+    #     - name: openbmp
+    #       initiation_message: "{{ inventory_hostname }}"
+    #       local_address: "{{ ansible_host }}"
+    #       # local_port: "{{ 65535 | random(start=1024) }}"
+    #       connection_mode: active
+    #       monitor: enable
+    #       route_monitoring: 
+    #         pre_policy: null
+    #         post_policy: null
+    #       station_address: 10.255.72.87
+    #       station_port: 5000
+    #       statistics_timeout: 300
     router_id: "{{ device.lo0.ipv4 }}"
